# findplunder

./: .gitignore  CMakeLists.txt  LICENSE  README.TXT  README.md  aspi_faults.pgn  dreier.pgn
.github/: FUNDING.yml
src/: BlunderAnalyzer.cpp  BlunderAnalyzer.h  Board.cpp  Board.h  Config.cpp  Config.h  Game.cpp  Game.h  Move.cpp  Move.h  PgnParser.cpp  PgnParser.h  StockfishEngine.cpp  StockfishEngine.h  main.cpp
